--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ transformers>=4.44.0
 torch>=2.2.2
 sentencepiece>=0.2.0
 safetensors>=0.4.3
+sentence-transformers>=2.2.2
+nltk>=3.8.1
+scikit-learn>=1.3.2
+tqdm>=4.66.1
